--- a/issues.html
+++ b/issues.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Environmental Issues</title>
+    <link rel="stylesheet" href="info.css">
 </head>
 
 <body>
