--- a/issues.html
+++ b/issues.html
@@ -9,8 +9,11 @@
 </head>
 
 <body>
-    <h1>Environmental Issues</h1>
-    <p>There are many environmental issues that have different effects on the world we live in. Learn about them here
+    <div id="heading">
+        <h1>Environmental Issues</h1>
+    </div>
+    <p id="description">There are many environmental issues that have different effects on the world we live in. Learn
+        about them here
         then go to the next page to find out how we can help.</p>
     <ul>
         <li>Fossil Fuel Dependence <p>Our world relies very heavily on fossil fuels that are detrimental to drill and
