--- a/issues.html
+++ b/issues.html
@@ -23,12 +23,12 @@
                 up in the ocean per year. Plastic breaks down to microplastics and these deplete the overall water
                 quality. Plastic products also do not biodegrade, so they will be there forever unless we do something
                 about it. </p>
-        </li>Climate Change <p>Climate change has brought upon many negative impacts to our environment such as droughts
+        </li>
+        <ii>Climate Change <p>Climate change has brought upon many negative impacts to our environment such as droughts
             and flooding. Enviroments such as the arctic are most vulnerable due to warming being twice as fast as the 
             global average. Many environments home to a variety of species aresuffering from climate change.
             Invasive species may start to come thrive in affected environments due to the environment being more detail
-            because of climate change. With the help of everyone supporting the reduction of emissions to zero caused by
-            greenhouse gas emissions, warming will be limited and wil help combat climate change. 
+            because of climate change. </p>
     </ul>
 
     <footer>
