--- a/issues.html
+++ b/issues.html
@@ -22,12 +22,18 @@
                     quality. Plastic products also do not biodegrade, so they will be there forever unless we do something
                     about it. </p>
             </li>
-            </li>Climate Change <p>Climate change has brought upon many negative impacts to our environment such as droughts
+            <li>Climate Change <p>Climate change has brought upon many negative impacts to our environment such as droughts
                 and flooding. Enviroments such as the arctic are most vulnerable due to warming being twice as fast as the 
                 global average. Many environments home to a variety of species aresuffering from climate change.
                 Invasive species may start to come thrive in affected environments due to the environment being more detail
                 because of climate change. With the help of everyone supporting the reduction of emissions to zero caused by
                 greenhouse gas emissions, warming will be limited and wil help combat climate change. </p> 
+            </li>
+            <li>
+                What you can do <p>Teach others to be more aware of climate change. Find enviornmentally friendly alternatives to technologies
+                you use. Instead of using a car, consider biking or walking. Save energy whenever you can. Turn of your lights
+                and AC when you are not using them. </p>
+            </li>
         </ul>
     
         <footer>
@@ -35,7 +41,9 @@
             <a
                 href="https://earth.org/the-biggest-environmental-problems-of-our-lifetime/">https://earth.org/the-biggest-environmental-problems-of-our-lifetime/</a> <br>
              <a   
-                href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts/</a>
+                href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts/</a> <br>
+            <a
+             href="https://www.epa.gov/climate-change/what-you-can-do-about-climate-change">https://www.epa.gov/climate-change/what-you-can-do-about-climate-change</a>
         </footer>
     </body>
 </div>
