--- a/solutions.html
+++ b/solutions.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div id="mainbody">
     <div id="heading">
         <h1>Environmental Issues</h1>
     </div>
@@ -32,6 +33,7 @@
         <a
             href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts/</a>
     </footer>
+    </div>
 </body>
 
 </html>
