--- a/solutions.html
+++ b/solutions.html
@@ -24,6 +24,14 @@
         that plastic pollution has can be limited. </p>
         </li>Climate Change <p>With the help of everyone supporting the reduction of emissions caused by
             greenhouse gas emissions, warming will be limited and wil help combat climate change. </p>
+        </li>Ocean Acidification <p>Through limiting plastic pollution and global warming, ocean acidification 
+            can be prevented or at least slowed. The carbon tax and communities pitching in solutions also 
+            help to combat ocean acidification as they combat plastic pollution and global warming.</p>
+        </li>Deforestation <p>Through limiting deforestation can forests continue to thrive and avoid extinction. With the
+         help of people willingly planting seeds for trees near forests going through deforestation to grow, certain parts of 
+            forests will be limited from being cut down while the other parts are permitted so the effects of forests being 
+            able to combat soil erosion will still be present while people can still cut down trees without impacting the environment 
+            more negatively. </p>
     </ul>
 
     <footer>
