--- a/solutions.html
+++ b/solutions.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="mainbody">
+    <a href="index.html">back</a>
     <div id="heading">
         <h1>Environmental Issues</h1>
     </div>
