--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<html lang="en"><head>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Environmental Issues</title>
@@ -8,40 +10,57 @@
 <body>
     <div id="mainbody">
         <h1>Environmental Issues</h1>
-        <p>There are many environmental issues that have different effects on the world we live in. Learn about them here
+        <p>There are many environmental issues that have different effects on the world we live in. Learn about them
+            here
             then go to the next page to find out how we can help.</p>
         <ul>
-            <li>Fossil Fuel Dependence <p>Our world relies very heavily on fossil fuels that are detrimental to drill and
+            <li>Fossil Fuel Dependence <p>Our world relies very heavily on fossil fuels that are detrimental to drill
+                    and
                     release CO2 when burned. This CO2 is a greenhouse gas, trapping heat in our atmosphere. </p>
             </li>
-            <li>Plastic pollution <p>In 2015, we produced 419 million tons of plastic. About 14 million tons per year ends
+            <li>Plastic pollution <p>In 2015, we produced 419 million tons of plastic. About 14 million tons per year
+                    ends
                     up in the ocean per year. Plastic breaks down to microplastics and these deplete the overall water
-                    quality. Plastic products also do not biodegrade, so they will be there forever unless we do something
+                    quality. Plastic products also do not biodegrade, so they will be there forever unless we do
+                    something
                     about it. </p>
             </li>
-            <li>Climate Change <p>Climate change has brought upon many negative impacts to our environment such as droughts
-                and flooding. Enviroments such as the arctic are most vulnerable due to warming being twice as fast as the 
-                global average. Many environments home to a variety of species aresuffering from climate change.
-                Invasive species may start to come thrive in affected environments due to the environment being more detail
-                because of climate change. With the help of everyone supporting the reduction of emissions to zero caused by
-                greenhouse gas emissions, warming will be limited and wil help combat climate change. </p> 
+            <li>Climate Change <p>Climate change has brought upon many negative impacts to our environment such as
+                    droughts
+                    and flooding. Enviroments such as the arctic are most vulnerable due to warming being twice as fast
+                    as the
+                    global average. Many environments home to a variety of species aresuffering from climate change.
+                    Invasive species may start to come thrive in affected environments due to the environment being more
+                    detail
+                    because of climate change. With the help of everyone supporting the reduction of emissions to zero
+                    caused by
+                    greenhouse gas emissions, warming will be limited and wil help combat climate change. </p>
             </li>
             <li>
-                What you can do <p>Teach others to be more aware of climate change. Find enviornmentally friendly alternatives to technologies
-                you use. Instead of using a car, consider biking or walking. Save energy whenever you can. Turn of your lights
-                and AC when you are not using them. </p>
+                What you can do <p>Teach others to be more aware of climate change. Find enviornmentally friendly
+                    alternatives to technologies
+                    you use. Instead of using a car, consider biking or walking. Save energy whenever you can. Turn of
+                    your lights
+                    and AC when you are not using them. </p>
             </li>
         </ul>
 
-        <button id="solutionsbutton">Solutions</button>
-    
+        <a id="solutionsbutton" href="solutions.html">Solutions</a>
+        <a id="issuesbutton" href="issues.html">Solutions</a>
+
         <footer>
             <p>Works cited</p>
-            <a href="https://earth.org/the-biggest-environmental-problems-of-our-lifetime/">https://earth.org/the-biggest-environmental-problems-of-our-lifetime/</a> <br>
-             <a href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts/</a> <br>
-            <a href="https://www.epa.gov/climate-change/what-you-can-do-about-climate-change">https://www.epa.gov/climate-change/what-you-can-do-about-climate-change</a>
+            <a
+                href="https://earth.org/the-biggest-environmental-problems-of-our-lifetime/">https://earth.org/the-biggest-environmental-problems-of-our-lifetime/</a>
+            <br>
+            <a
+                href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts/</a>
+            <br>
+            <a
+                href="https://www.epa.gov/climate-change/what-you-can-do-about-climate-change">https://www.epa.gov/climate-change/what-you-can-do-about-climate-change</a>
         </footer>
     </div>
 </body>
 <script src="main.js"></script>
+
 </html>
