--- a/solutions.html
+++ b/solutions.html
@@ -10,38 +10,45 @@
 
 <body>
     <div id="mainbody">
-    <a href="index.html">back</a>
-    <div id="heading">
-        <h1>Environmental Issues</h1>
-    </div>
-    <p id="description">There are many environmental issues that have different effects on the world we live in. Learn
-        about them here
-        then go to the next page to find out how we can help.</p>
-    <ul>
-        <li>Fossil Fuel Dependence <p>With the usage of carbon taxes (tax on carbon emission released from burning fossil fuels), 
-        carbon emissions are being used less and limits the rise of global temperature. </p>
-        </li>
-        <li>Plastic Pollution <p> With the help of all communites pitching in and helping collect plastic, the dire effects 
-        that plastic pollution has can be limited. </p>
-        </li>Climate Change <p>With the help of everyone supporting the reduction of emissions caused by
-            greenhouse gas emissions, warming will be limited and wil help combat climate change. </p>
-        </li>Ocean Acidification <p>Through limiting plastic pollution and global warming, ocean acidification 
-            can be prevented or at least slowed. The carbon tax and communities pitching in solutions also 
-            help to combat ocean acidification as they combat plastic pollution and global warming.</p>
-        </li>Deforestation <p>Through limiting deforestation can forests continue to thrive and avoid extinction. With the
-         help of people willingly planting seeds for trees near forests going through deforestation to grow, certain parts of 
-            forests will be limited from being cut down while the other parts are permitted so the effects of forests being 
-            able to combat soil erosion will still be present while people can still cut down trees without impacting the environment 
-            more negatively. </p>
-    </ul>
+        <a href="index.html">back</a>
+        <div id="heading">
+            <h1>Environmental Issues</h1>
+        </div>
+        <p id="description">There are many environmental issues that have different effects on the world we live in.
+            Learn
+            about them here
+            then go to the next page to find out how we can help.</p>
+        <ul>
+            <li>Fossil Fuel Dependence <p>With the usage of carbon taxes (tax on carbon emission released from burning
+                    fossil fuels),
+                    carbon emissions are being used less and limits the rise of global temperature. </p>
+            </li>
+            <li>Plastic Pollution <p> With the help of all communites pitching in and helping collect plastic, the dire
+                    effects
+                    that plastic pollution has can be limited. </p>
+            </li>Climate Change <p>With the help of everyone supporting the reduction of emissions caused by
+                greenhouse gas emissions, warming will be limited and will help combat climate change. </p>
+            </li>Ocean Acidification <p>Through limiting plastic pollution and global warming, ocean acidification
+                can be prevented or at least slowed. The carbon tax and communities pitching in solutions also
+                help to combat ocean acidification as they combat plastic pollution and global warming.</p>
+            </li>Deforestation <p>Through limiting deforestation can forests continue to thrive and avoid extinction.
+                With the
+                help of people willingly planting seeds for trees near forests going through deforestation to grow,
+                certain parts of
+                forests will be limited from being cut down while the other parts are permitted so the effects of
+                forests being
+                able to combat soil erosion will still be present while people can still cut down trees without
+                impacting the environment
+                more negatively. </p>
+        </ul>
 
-    <footer>
-        <p>Works cited</p>
-        <a
-            href="https://earth.org/the-biggest-environmental-problems-of-our-lifetime/">https://earth.org/the-biggest-environmental-problems-of-our-lifetime/</a>
-        <a
-            href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts/</a>
-    </footer>
+        <footer>
+            <p>Works cited</p>
+            <a
+                href="https://earth.org/the-biggest-environmental-problems-of-our-lifetime/">https://earth.org/the-biggest-environmental-problems-of-our-lifetime/</a>
+            <a
+                href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts/</a>
+        </footer>
     </div>
 </body>
 
