--- a/issues.html
+++ b/issues.html
@@ -24,30 +24,41 @@
                 quality. Plastic products also do not biodegrade, so they will be there forever unless we do something
                 about it. </p>
         </li>
-        <ii>Climate Change <p>Climate change has brought upon many negative impacts to our environment such as droughts
-            and flooding. Enviroments such as the arctic are most vulnerable due to warming being twice as fast as the 
-            global average. Many environments home to a variety of species aresuffering from climate change.
-            Invasive species may start to come thrive in affected environments due to the environment being more detail
-            because of climate change. </p>
+        <li>Climate Change <p>Climate change has brought upon many negative impacts to our environment such as droughts
+                and flooding. Enviroments such as the arctic are most vulnerable due to warming being twice as fast as
+                the
+                global average. Many environments home to a variety of species aresuffering from climate change.
+                Invasive species may start to come thrive in affected environments due to the environment being more
+                detail
+                because of climate change. </p>
         </li>
-        <ii></ii>Ocean Acidification <p>Ocean Acidification refers to oceans absorbing 30% of carbon dioxide released into 
-        the Earth's atmosphere. PH levels lower and if they become too low, organisms that thrive in the ocean such as 
-        oysters could have their shells and skeletons dissolve. Rising global temperatures and plastic pollution also 
-        cause ocean acidification. If other environmental issues are not limited, then more issues like ocean acidification 
-        will appear more and more. </p>
+        <li>Ocean Acidification <p>Ocean Acidification refers to oceans absorbing 30% of carbon dioxide released
+                into
+                the Earth's atmosphere. PH levels lower and if they become too low, organisms that thrive in the
+                ocean such as
+                oysters could have their shells and skeletons dissolve. Rising global temperatures and plastic
+                pollution also
+                cause ocean acidification. If other environmental issues are not limited, then more issues like
+                ocean acidification
+                will appear more and more. </p>
         </li>
-        <ii>Deforestation <p>Through limiting deforestation can forests continue to thrive and avoid extinction. With the
-         help of people willingly planting seeds for trees near forests going through deforestation to grow, certain parts of 
-            forests will be limited from being cut down while the other parts are permitted so the effects of forests being 
-            able to combat soil erosion will still be present while people can still cut down trees without impacting the environment 
-            more negatively. </p>
+        <li>Deforestation <p>Through limiting deforestation can forests continue to thrive and avoid extinction.
+                With the
+                help of people willingly planting seeds for trees near forests going through deforestation to grow,
+                certain parts of
+                forests will be limited from being cut down while the other parts are permitted so the effects of
+                forests being
+                able to combat soil erosion will still be present while people can still cut down trees without
+                impacting the environment
+                more negatively. </p>
+        </li>
     </ul>
 
     <footer>
         <p>Works cited</p>
         <a
             href="https://earth.org/the-biggest-environmental-problems-of-our-lifetime/">https://earth.org/the-biggest-environmental-problems-of-our-lifetime/</a>
-        <a   
+        <a
             href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts/</a>
     </footer>
 </body>
