fixed issues link

--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
             </li>
         </ul>
 
-        <a id="solutionsbutton" href="solutions.html">Solutions</a>
-        <a id="issuesbutton" href="issues.html">Solutions</a>
-
+        <div class="links">
+            <a id="issuesbutton" href="issues.html">Issues</a>
+            <a id="solutionsbutton" href="solutions.html">Solutions</a>
+        </div>
         <footer>
             <p>Works cited</p>
             <a
