--- a/solutions.html
+++ b/solutions.html
@@ -12,7 +12,7 @@
     <div id="mainbody">
         <a href="index.html">back</a>
         <div id="heading">
-            <h1>Environmental Issues</h1>
+            <h1>Solutions</h1>
         </div>
         <p id="description">There are many environmental issues that have different effects on the world we live in.
             Learn
