added ids to issue

--- a/issues.html
+++ b/issues.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <div id="mainbody">
     <div id="heading">
         <h1>Environmental Issues</h1>
     </div>
@@ -57,10 +58,11 @@
     <footer>
         <p>Works cited</p>
         <a
-            href="https://earth.org/the-biggest-environmental-problems-of-our-lifetime/">https://earth.org/the-biggest-environmental-problems-of-our-lifetime/</a>
+            href="https://earth.org/the-biggest-environmental-problems-of-our-lifetime/">https://earth.org/the-biggest-environmental-problems-of-our-lifetime/</a><br>
         <a
             href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts/</a>
     </footer>
+</div>
 </body>
 
 </html>
