fixed overlapping content

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <div id="mainbody">
         <h1>Environmental Issues</h1>
-        <p>There are many environmental issues that have different effects on the world we live in. Learn about them
-            here
-            then go to the next page to find out how we can help.</p>
+        <div id="intro">
+            <p>There are many environmental issues that have different effects on the world we live in. Learn about them
+                here
+                then go to the next page to find out how we can help.</p>
+        </div>
         <div class="links">
             <a id="issuesbutton" href="issues.html">Issues</a>
             <a id="solutionsbutton" href="solutions.html">Solutions</a>
