--- a/solutions.html
+++ b/solutions.html
@@ -45,7 +45,7 @@
         <footer>
             <p>Works cited</p>
             <a
-                href="https://earth.org/the-biggest-environmental-problems-of-our-lifetime/">https://earth.org/the-biggest-environmental-problems-of-our-lifetime/</a>
+                href="https://earth.org/the-biggest-environmental-problems-of-our-lifetime/">https://earth.org/the-biggest-environmental-problems-of-our-lifetime/</a><br>
             <a
                 href="https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts">https://www.noaa.gov/education/resource-collections/climate/climate-change-impacts/</a>
         </footer>
