--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <div class="links">
             <a id="issuesbutton" href="issues.html">Issues</a>
+            <a id="overviewbutton" href="overview.html">Overview</a>
             <a id="solutionsbutton" href="solutions.html">Solutions</a>
         </div>
         <footer>
